finish react mobx config & todolist demo

--- a/package.json
+++ b/package.json
@@ -3,23 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mobx": "^5.6.0",
+    "mobx-react": "^5.3.6",
     "react": "^16.6.3",
+    "react-app-rewire-mobx": "^1.0.9",
+    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "parserOptions": {
+      "ecmaFeatures": {
+        "legacyDecotators": true
+      }
+    }
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.1.6",
+    "customize-cra": "^0.2.4"
+  }
 }
